removed Questions class